# Snake-Rogue

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
core/source/: colour.h  game.cpp  game.h  layer.h  random_number_generator.h  sdl_manager.cpp  sdl_manager.h  singleton.h
game/source/: action_result.h  apple.cpp  apple.h  component.cpp  component.h  creature_stats.h  food.cpp  food.h  game_layer.cpp  game_layer.h  game_object.h  i_renderable.h  main.cpp  resource_bar.cpp  resource_bar.h  sdl_manager.cpp  sdl_manager.h  sprite_component.cpp  sprite_component.h  sprite_renderer.cpp  sprite_specification.h  spritesheet.cpp  spritesheet.h  stat.cpp  stat.h  stat_modifier.cpp  stat_modifier.h  test_layer.cpp  test_layer.h  timed_stat_modifier.h  transform_component.h
game/source/components/: component.h
game/source/creatures/: creature.cpp  creature.h  creature_builder.cpp  creature_builder.h  enemy.cpp  enemy.h  game_controlled_creature.cpp  game_controlled_creature.h  player_controlled_creature.cpp  player_controlled_creature.h  player_snake.cpp  player_snake.h  simple_enemy.cpp  simple_enemy.h  snake.cpp  snake.h
game/source/dungeon_generation/: dirt.cpp  dirt.h  environment_object.cpp  environment_object.h  floor.cpp  floor.h  i_floor_generator.h  premade_floor_generator.cpp  premade_floor_generator.h  tile.cpp  tile.h  wall.cpp  wall.h
game/source/entities/: body_part.cpp  body_part.h  direction_input_action.h  enemy.cpp  enemy.h  i_player_entity.h  input_action.cpp  input_controller.cpp  input_controller.h  player_controlled_entity.h  player_input.h  player_input_controller.cpp  player_input_controller.h  position.cpp  simple_enemy_input_controller.cpp  simple_enemy_input_controller.h  snake.cpp  snake.h  time_system.cpp  turn_based_entity.cpp  turn_based_entity.h  (+2 more)
src/: floor.cpp  floor.h  game.cpp  game.h  i_floor_generator.h  main.cpp  premade_floor_generator.cpp  premade_floor_generator.h  sdl_manager.cpp  sdl_manager.h  tile.h
src/dungeon_generation/: premade_floor_generator.cpp  premade_floor_generator.h
src/entities/: body_part.h  direction.h  enemy.cpp  position.h  snake.cpp  snake.h  time_system.cpp  time_system.h  turn_based_entity.cpp  turn_based_entity.h
temporary_outside_build/: enemy_factory.cpp  enemy_factory.h  game_layer.cpp  game_layer.h  snake_factory.cpp  snake_factory.h  sprite_renderer.h
temporary_source_files/: creature_old.h  enemy.cpp  enemy.h  snake.h
(+27 files in other folders)
